--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@tarojs/taro-tt": "1.2.24",
     "@tarojs/taro-weapp": "1.2.24",
     "nervjs": "^1.3.9",
-    "nerv-devtools": "^1.3.9"
+    "nerv-devtools": "^1.3.9",
+    "taro-ui": "^1.5.2"
+  
   },
   "devDependencies": {
     "@types/react": "^16.4.6",
