--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "@tarojs/taro-swan": "1.2.24",
     "@tarojs/taro-tt": "1.2.24",
     "@tarojs/taro-weapp": "1.2.24",
-    "nervjs": "^1.3.9",
+    "axios": "^0.18.0",
+    "mockjs": "^1.0.1-beta3",
     "nerv-devtools": "^1.3.9",
+    "nervjs": "^1.3.9",
     "taro-ui": "^1.5.2"
-  
   },
   "devDependencies": {
     "@types/react": "^16.4.6",
